[package]
name = "ckb-tx-test"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-sdk = "2.0.0"
ckb-types = "0.104.0"
ckb-jsonrpc-types = "0.104.0"
secp256k1 = { version = "0.20", features = ["recovery"] }
ckb-hash = "0.104.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
