[package]
name = "reuse-port-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.4", features = ["all"] }
log = "0.4.17"
simple_logger = "2.3.0"
ctrlc = { version = "3.0", features = ["termination"] }
